# tdd

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: hash_distribution.py  hashtable.py
src/homework/: main.py
tests/: test_hashtable.py  test_main.py
